исправления после дебага

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
       POSTGRES_PASSWORD: password
     healthcheck:
       test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
-      timeout: 5s
       interval: 5s
+      timeout: 5s
       retries: 10
+      start_period: 10s
