исправления после дебага

--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 stats-service.url=http://localhost:9090
 server.port=8080
+app-name=${pom.artifactId}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
