--- a/main-service/pom.xml
+++ b/main-service/pom.xml
@@ -82,6 +82,11 @@
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>6.1.11</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
