--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
+log4j.logger.org.hibernate.SQL=debug
+log4j.logger.org.hibernate.type=trace
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
