--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       POSTGRES_DB: statservice
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
+      stats-service:
+      url: "http://stats-server:9090"
     healthcheck:
       test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
       timeout: 5s
@@ -40,6 +42,8 @@ services:
       SPRING_DATASOURCE_USERNAME: user
       SPRING_DATASOURCE_PASSWORD: password
       SPRING_JPA_DATABASE_PLATFORM: org.hibernate.dialect.PostgreSQLDialect
+      stats-service:
+      url: "http://stats-server:9090"
 
   ewm-db:
     image: postgres:16.1
@@ -51,6 +55,8 @@ services:
       POSTGRES_DB: explorewithme
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
+      stats-service:
+      url: "http://stats-server:9090"
     healthcheck:
       test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
       interval: 5s
