--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=9090
+stats-service.url=http://stats-server:9090
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
